# Files

./: .gitignore  BridgeService.kt  README.md  check.js  docker-compose.yml  firefiles_improvement_report.html  index.html  package-lock.json  package.json  settings.gradle  smb.conf  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/bridge/: BridgeService.kt  MainActivity.kt
scripts/: release.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web-monitor/: Dockerfile  README.md  server.js
web-monitor/public/: index.html
