[package]
name = "cross-network-android-file-bridge"
version = "0.1.69"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
regex = "1"
rfd = "0.14"

[build-dependencies]
tauri-build = { version = "2", features = [] }
